edit App name and favicon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Jakareya's Portfolio.",
+  "name": "The portfolio represent Jakareya's information. Portfolio created by Jakareya.",
   "icons": [
     {
       "src": "favicon.ico",
